--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
      <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide"><img src="../imagens/Guia Front-end.svg" alt="guia Front-end"></div>
-      <div class="swiper-slide"><img src="../imagens/Javascript.svg" alt="Javascript"></div>
-      <div class="swiper-slide"><img src="../imagens/Liderança.svg" alt="Liderança"></div>
-      <div class="swiper-slide"><img src="../imagens/Nodejs.svg" alt="Nodejs"></div>
-      <div class="swiper-slide"><img src="../imagens/Portugol.svg" alt="Portugol"></div>
-      <div class="swiper-slide"><img src="../imagens/ReactNative.svg" alt="ReactNative"></div>
-      <div class="swiper-slide"><img src="../imagens/Tuning.svg" alt="Tuning"></div>
+      <div class="swiper-slide"><img src="./imagens/Guia Front-end.svg" alt="guia Front-end"></div>
+      <div class="swiper-slide"><img src="./imagens/Javascript.svg" alt="Javascript"></div>
+      <div class="swiper-slide"><img src="./imagens/Liderança.svg" alt="Liderança"></div>
+      <div class="swiper-slide"><img src="./imagens/Nodejs.svg" alt="Nodejs"></div>
+      <div class="swiper-slide"><img src="./imagens/Portugol.svg" alt="Portugol"></div>
+      <div class="swiper-slide"><img src="./imagens/ReactNative.svg" alt="ReactNative"></div>
+      <div class="swiper-slide"><img src="./imagens/Tuning.svg" alt="Tuning"></div>
       ...
     </div>
    
@@ -107,14 +107,14 @@
             <p class="descricao__textpo">Construindo uma aplicação integrada com a plataforma do Google.</p>
         </div>
         <!-- 2º coluna -->
-        <img class="Imagem" src="../imagens/Angular.svg" alt="logo angular">
+        <img class="Imagem" src="./imagens/Angular.svg" alt="logo angular">
     </div>
         <!-- 2º linha -->
         <div class="card__botoes">
             <!-- 1º coluna -->
             <ul class="botoes">
-                <li class="botoes__item"><img src="../imagens/Favoritos.svg" alt="Favoritar livro"></li>
-                <li class="botoes__item"><img src="../imagens/Compras.svg" alt="Adicionar ao Carrinho"></li>
+                <li class="botoes__item"><img src="./imagens/Favoritos.svg" alt="Favoritar livro"></li>
+                <li class="botoes__item"><img src="./imagens/Compras.svg" alt="Adicionar ao Carrinho"></li>
             </ul> 
             <!-- 2º coluna -->
             <a href="#" class="botoes__ancora"> Saiba mais </a>
@@ -133,10 +133,10 @@
      <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide"><img src="../imagens/Javascript.svg" alt="Javascript"></div>
-      <div class="swiper-slide"><img src="../imagens/Nodejs.svg" alt="Nodejs"></div>
-      <div class="swiper-slide"><img src="../imagens/Portugol.svg" alt="Portugol"></div>
-      <div class="swiper-slide"><img src="../imagens/ReactNative.svg" alt="ReactNative"></div>
+      <div class="swiper-slide"><img src="./imagens/Javascript.svg" alt="Javascript"></div>
+      <div class="swiper-slide"><img src="./imagens/Nodejs.svg" alt="Nodejs"></div>
+      <div class="swiper-slide"><img src="./imagens/Portugol.svg" alt="Portugol"></div>
+      <div class="swiper-slide"><img src="./imagens/ReactNative.svg" alt="ReactNative"></div>
       ...
     </div>
    
@@ -153,21 +153,21 @@
     <div class="card__descricao">
         <!-- 1º coluna -->
         <div class="descricao">
-        <img class="Estrelinhas" src="../imagens/Estrelinhas.svg" alt="logo angular">
+        <img class="Estrelinhas" src="./imagens/Estrelinhas.svg" alt="logo angular">
     
             <h3 class="descricao__titulo">Autora do Mês</h3>
             <h2 class="descricao__subtitulo">Juliana Agarikov</h2>
             <p class="descricao__textpo">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
         </div>
         <!-- 2º coluna -->
-        <img class="Imagem" src="../imagens/Perfil-escritora 1.svg" alt="foto Perfil-escritora">
+        <img class="Imagem" src="./imagens/Perfil-escritora 1.svg" alt="foto Perfil-escritora">
     </div>
         <!-- 2º linha -->
         <div class="card__botoes">
             <!-- 1º coluna -->
             <ul class="botoes">
-                <li class="botoes__item"><img src="../imagens/Favoritos.svg" alt="Favoritar livro"></li>
-                <li class="botoes__item"><img src="../imagens/Compras.svg" alt="Adicionar ao Carrinho"></li>
+                <li class="botoes__item"><img src="./imagens/Favoritos.svg" alt="Favoritar livro"></li>
+                <li class="botoes__item"><img src="./imagens/Compras.svg" alt="Adicionar ao Carrinho"></li>
             </ul> 
             <!-- 2º coluna -->
             <a href="#" class="botoes__ancora"> Saiba mais </a>
