--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p class="descricao__textpo">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
         </div>
         <!-- 2º coluna -->
-        <img class="Imagem" src="/imagens/Perfil-escritora.svg" alt="foto Perfil-escritora">
+        <img class="Imagem" src="./imagens/Perfil-escritora.svg" alt="foto Perfil-escritora">
     </div>
         <!-- 2º linha -->
         <div class="card__botoes">
